Fix alignment of images.

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -1,5 +1,5 @@
 /* Custom styling for stLearn documentation */
 
 p img {
-    vertical-align: bottom
+    vertical-align: middle
 }
